fix table truncated due to email size

--- a/css/styles.css
+++ b/css/styles.css
@@ -277,3 +277,7 @@ table td.hyphenate {
     -moz-hyphens: auto;
     hyphens: auto;
 }
+
+.break-all{
+  word-break: break-all;
+}
